[package]
name = "order-book-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may_minihttp = "0.1"
yarte = "0.15.7"

may = { version = "0.3", default-features = false }
serde_json = "1.0.114"
bytes = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
fastrand = "2.0.1"
strum = "0.26.2"
strum_macros = "0.26.1"

[features]
default = ["may/default"]
